# otus-hello-world

./: CMakeLists.txt  main.cxx  version.hpp
.github/workflows/: main.yml
